--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,9 +1,9 @@
 /*BACKGROUND DEL INDEX*/
-*{margin: 0;
+    * {margin: 0;
     padding: 0;
     box-sizing: border-box;}
 
-.fondo {min-height: 100vh;
+.fondo {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.897);
 }
@@ -76,7 +76,7 @@ img:hover {
 
 /*FORMULARIO*/
 .backgroundcontacto {
-    background-image: url(./img/backgroundContacto.jpg);
+    background-image: url(../img/contactoback.jpg);
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
