--- a/src/components/App.css
+++ b/src/components/App.css
@@ -25,7 +25,6 @@
     text-align: center;}
 
 
-
     
 img {
     padding-top: 20px;
@@ -50,17 +49,13 @@ img:hover {
     border-radius: 3px;}
 
 /*ITEM DETAIL*/
-.detalle {width: 100%;
-    height: 100%;
+.detalle {
     font-family: 'Kanit', sans-serif;
     border-radius: 3px;
-    display: grid;
-    align-content: center;
-    justify-items: center;
 }
 
 .itemDetail {background-color: rgba(255, 255, 255, 0.842);
-    height: 100%;
+    
     width: 100%;
     margin-top: 20px;
     align-items: center;
@@ -68,9 +63,12 @@ img:hover {
     
 }
 
-.itemDetailBodyDark {
-    background-color: hsla(0, 0%, 0%, 0.897);
-    color:white;
+.itemDetailBodyDark { 
+    width: 100%;
+    margin-top: 20px;
+    align-items: center;
+    background-color: gainsboro;
+    color:rgb(12, 12, 12);
 }
 
 .darkMode {
