--- a/src/components/App.css
+++ b/src/components/App.css
@@ -19,7 +19,6 @@
     text-align: center;
 }
 
-
 img {
     padding-top: 20px;
     border-radius: 2px;
@@ -38,25 +37,28 @@ img:hover {
 
 .verProductoDark {
     background-color: rgba(255, 255, 255, 0.925);
-    color: black;
     font-family: 'Kanit', sans-serif;
     letter-spacing: 2px;
     border-radius: 3px;
+    border: solid;
+    border-color: rgba(0, 0, 0, 0.753);
 }
 
 /*ITEM DETAIL*/
-.detalle {
+.detalle {display: flex;
+    flex-direction: column;
+    align-items: center;
     font-family: 'Kanit', sans-serif;
     border-radius: 3px;
 }
 
-.itemDetail {
-    background-color: rgba(255, 255, 255, 0.842);
+.itemDetail {background-color: rgba(255, 255, 255, 0.842);
     width: 100%;
     margin-top: 20px;
     align-items: center;
-
 }
+
+.imgDetail {margin-top: 10px;}
 
 .itemDetailBodyDark {
     width: 100%;
@@ -72,8 +74,7 @@ img:hover {
 }
 
 /*BOTONES DEL ITEM DETAIL*/
-.finalizarcompra {
-    font-size: 13px;
+.finalizarcompra {font-size: 13px;
     font-family: 'Kanit', sans-serif;
     letter-spacing: 2px;
     margin-bottom: 20px;
